--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -9,3 +9,7 @@ block.decay-mod-energy-container-consumer.name = 能量释放器
 block.decay-mod-energy-container-consumer.description = 能量释放器将从溢满的能量容器中释放能量，空的能量容器将被销毁。
 block.decay-mod-energy-container-charger.name = 充能器
 block.decay-mod-energy-container-charger.description = 充能器将空的能量容器充能使之成为溢满的能量容器。
+block.decay-mod-solar-thermal-collector.name=太阳能集热器
+block.decay-mod-solar-thermal-collector.description=与太阳能板不同的是，它聚集太阳光并将其转化为能量。
+block.decay-mod-large-solar-thermal-collector.name=大型太阳能集热器
+block.decay-mod-large-solar-thermal-collector.description=与太阳能板不同的是，它聚集太阳光并将其转化为能量。比标准太阳能集热器更高效。
